# MedRelay

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.prod.yml  main.py  package-lock.json  package.json  pyproject.toml  vite.config.js  web.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_organisations.py  004_audit_log_organisation_id.py
app/: cli.py  config.py  dependencies.py  main.py  policies.py  security.py  serialization.py  templating.py
app/actions/: __init__.py  events.py  incidents.py  resources.py  staff.py
app/db/: engine.py  session.py  uow.py
app/db/models/: __init__.py  audit_log.py  event.py  incident.py  incident_note.py  incident_resource.py  organisation.py  resource.py  resource_staff.py  staff.py  user.py  user_organisation.py
app/enums/: __init__.py  clinical_level.py  incident_status.py  resource_status.py
app/handlers/: validation.py
app/middleware/: security.py  session.py
app/observability/: __init__.py  db_pool.py
app/realtime/: __init__.py  hub.py
app/repositories/: __init__.py  audit_log.py  base.py  event.py  incident.py  incident_note.py  organisation.py  resource.py  session.py  staff.py  user.py
app/resources/static/css/: app.css
app/resources/static/js/: app.js  realtime.js
app/resources/templates/: dashboard.html
app/resources/templates/admin/audit_logs/: index.html
app/resources/templates/admin/organisations/: create.html  edit.html  index.html
app/resources/templates/admin/users/: create.html
app/resources/templates/auth/: login.html
app/resources/templates/components/events/: create_modal.html
app/resources/templates/components/incidents/: row.html  table.html
app/resources/templates/components/layout/: nav.html  sidebar.html
app/resources/templates/components/shared/: modal.html  open_modal_on_load.html  ui.html
app/resources/templates/components/staff/: create_modal.html
app/resources/templates/events/: edit.html  show.html
app/resources/templates/incidents/: show.html
app/resources/templates/layouts/: app.html  auth.html
app/resources/templates/platform/organisations/: edit.html  index.html
app/resources/templates/platform/system/: index.html
app/resources/templates/resources/: index.html  show.html
app/resources/templates/staff/: index.html
app/routes/: __init__.py  admin.py  auth.py  dashboard.py  events.py  health.py  incidents.py  legacy.py  organisations.py  realtime.py  resources.py  staff.py
app/routes/events/: __init__.py  mutations.py  views.py
app/routes/incidents/: __init__.py  mutations.py  router.py  views.py
app/routes/platform/: __init__.py  organisations.py  system.py
app/routes/resources/: __init__.py  mutations.py  router.py  views.py
app/routes/staff/: __init__.py  mutations.py  router.py  views.py
app/schemas/: __init__.py
app/schemas/forms/: __init__.py  admin.py  auth.py  base.py  dashboard.py  events.py  incidents.py  organisations.py  resources.py  staff.py
app/services/: audit.py  auth.py  dashboard.py  events.py  incidents.py  organisations.py  platform.py  resource_capability.py  resources.py  staff.py  types.py  users.py
app/templates/: dashboard.html
app/templates/admin/organisations/: create.html  edit.html  index.html
app/templates/admin/users/: create.html  index.html
app/templates/auth/: login.html
app/templates/components/dashboard/: summary_cards.html
app/templates/components/events/: selector.html
app/templates/components/incidents/: table.html
app/templates/components/layout/: sidebar.html
app/templates/components/resources/: create_modal.html  row.html  table.html
app/templates/components/shared/: modal.html  staff_multiselect.html
app/templates/events/: create.html  index.html
app/templates/incidents/: index.html  show.html
app/templates/layouts/: app.html
app/templates/platform/organisations/: create.html  edit.html  index.html
app/templates/platform/system/: index.html
app/templates/resources/: index.html  show.html
app/templates/staff/: create.html  index.html
app/web/: __init__.py  csrf.py  entities.py  handlers.py  responses.py
frontend/css/: app.css
migrations/: env.py
migrations/versions/: 001_initial_schema.py  003_add_org_role.py  004_audit_log_organisation_id.py
scripts/: convert_templates.py
src/medrelay/: __init__.py  cli.py  dependencies.py  main.py  policies.py  serialization.py  templating.py
src/medrelay/db/: __init__.py  session.py
src/medrelay/db/models/: __init__.py  audit_log.py  event.py  incident.py  incident_note.py  incident_resource.py  resource.py  resource_staff.py  staff.py  user.py
src/medrelay/enums/: __init__.py  resource_type.py  user_role.py
src/medrelay/realtime/: __init__.py  hub.py
src/medrelay/routes/: __init__.py  admin.py  auth.py  dashboard.py  events.py  incidents.py  realtime.py  resources.py  staff.py
src/medrelay/services/: __init__.py  audit.py  events.py  incidents.py  resource_capability.py  resources.py  staff.py  users.py
src/medrelay/templates/admin/audit_logs/: index.html
src/medrelay/templates/components/incidents/: row.html
src/medrelay/templates/components/layout/: nav.html  sidebar.html
src/medrelay/templates/events/: edit.html  index.html  show.html
tests/: conftest.py  factories.py
tests/feature/: test_admin.py  test_assign_resource.py  test_create_incident.py  test_dashboard.py  test_events.py  test_incidents.py  test_login.py  test_misc.py  test_organisations.py  test_platform.py  test_realtime.py  test_remember_login.py  test_resources.py  test_staff.py  test_tenant_isolation.py  test_update_incident_status.py
tests/unit/: test_actions.py  test_authorize.py  test_clinical_level.py  test_concurrency.py  test_config.py  test_dependencies.py  test_forms.py  test_list_scoping.py  test_observability.py  test_policies.py  test_policies_full.py  test_realtime_full.py  test_repositories.py  test_services.py  test_templating.py  test_user.py  test_validation_handler.py  test_web.py
(+2 files in other folders)
