[project]
name = "medrelay"
version = "0.1.0"
description = "Medical event CAD dispatch system"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt<5",
    "fastapi>=0.136.3",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0,<5",
    "pydantic-settings>=2.14.1",
    "pymysql>=1.2.0",
    "python-multipart>=0.0.29",
    "sqlalchemy>=2.0.50",
    "typer>=0.25.1",
    "uvicorn[standard]>=0.48.0",
]

[project.optional-dependencies]
dev = [
    "factory-boy>=3.3.3",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
]

[project.scripts]
medrelay = "medrelay.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/medrelay"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
]

[tool.uv]
package = true
