[project]
name = "medrelay"
version = "0.1.0"
description = "Medical event CAD dispatch system"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.3",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0,<4.1",
    "pydantic-settings>=2.14.1",
    "pymysql>=1.2.0",
    "python-multipart>=0.0.29",
    "sqlalchemy>=2.0.50",
    "typer>=0.25.1",
    "uvicorn[standard]>=0.48.0",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
    "import-linter>=2.10",
    "mypy>=1.19.1",
]

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/conftest.py",
    "*/.venv/*",
    "*/venv/*",
    "app/cli.py",       # Interactive Typer CLI — tested manually
]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
line-length = 160
target-version = "py314"

[tool.ruff.lint]
# Enable pycodestyle (E), Pyflakes (F), unused imports (F401), unused variables (F841), isort (I)
select = ["E", "F", "I", "W", "UP"]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "E741",  # Ambiguous variable name
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py files

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# import-linter – enforces module boundaries
# ---------------------------------------------------------------------------

[tool.importlinter]
root_packages = ["app"]
include_external_packages = false

[[tool.importlinter.contracts]]
name = "Only models and repositories may import app.db directly"
type = "forbidden"
source_modules = [
    "app.cli",
    "app.routes",
    "app.services",
    "app.dependencies",
    "app.policies",
    "app.serialization",
]
forbidden_modules = ["app.db.models", "app.db.session", "app.db.base"]
allow_indirect_imports = true