[project]
name = "medrelay"
version = "0.1.0"
description = "Medical event CAD dispatch system"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.3",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0,<4.1",
    "pydantic-settings>=2.14.1",
    "pymysql>=1.2.0",
    "redis>=5.2.0",
    "python-multipart>=0.0.29",
    "sqlalchemy>=2.0.50",
    "typer>=0.25.1",
    "uvicorn[standard]>=0.48.0",
]

[project.scripts]
medrelay = "app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=90"

[tool.mypy]
python_version = "3.14"
files = ["app"]
explicit_package_bases = true
namespace_packages = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
    "import-linter>=2.10",
    "mypy>=1.19.1",
]

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/conftest.py",
    "*/.venv/*",
    "*/venv/*",
    "app/cli.py",       # Interactive Typer CLI — tested manually
]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 90

[tool.ruff]
line-length = 160
target-version = "py314"

[tool.ruff.lint]
# Enable pycodestyle (E), Pyflakes (F), unused imports (F401), unused variables (F841), isort (I)
select = ["E", "F", "I", "W", "UP"]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "E741",  # Ambiguous variable name
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py files

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# import-linter – enforces module boundaries
# ---------------------------------------------------------------------------

[tool.importlinter]
root_packages = ["app"]
include_external_packages = false

[[tool.importlinter.contracts]]
name = "Only repositories and dependencies may import app.db directly"
type = "forbidden"
source_modules = [
    "app.cli",
    "app.routes",
    "app.services",
    "app.policies",
    "app.serialization",
]
forbidden_modules = ["app.db.models", "app.db.session", "app.db.base"]
allow_indirect_imports = true

[[tool.importlinter.contracts]]
name = "Routes must not import the database layer directly"
type = "forbidden"
source_modules = ["app.routes"]
forbidden_modules = ["app.db"]
allow_indirect_imports = true

[[tool.importlinter.contracts]]
name = "Routes must not import repositories directly"
type = "forbidden"
source_modules = ["app.routes"]
forbidden_modules = ["app.repositories"]
allow_indirect_imports = true

[[tool.importlinter.contracts]]
name = "Routes must not import policies directly"
type = "forbidden"
source_modules = ["app.routes"]
forbidden_modules = ["app.policies"]
allow_indirect_imports = true

[[tool.importlinter.contracts]]
name = "Actions must not import routes"
type = "forbidden"
source_modules = ["app.actions"]
forbidden_modules = ["app.routes"]
allow_indirect_imports = true

[[tool.importlinter.contracts]]
name = "Schemas must not import services or routes"
type = "forbidden"
source_modules = ["app.schemas"]
forbidden_modules = ["app.services", "app.routes"]
allow_indirect_imports = true